--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "next-seo": "^5.15.0",
     "next-sitemap": "^4.0.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.5.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
