--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,5 +42,5 @@
     }
   },
   "exclude": ["./out/**/*", "./node_modules/**/*", "cypress/**/*.ts"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/charts/LineChart/LineChart.jsx", "src/components/charts/index.js"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/charts/LineChart/LineChart.jsx", "src/components/charts/index.js", "src/pages/charts.jsx"]
 }
